# relay44

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .render-workspace-lock.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  HISTORY.md  LICENSE  MAINTAINERS.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
app/: .env.example  Cargo.toml  Dockerfile
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  hooks.rs  main.rs  runtime.rs  sessions.rs
cli/src/commands/: activity.rs  agents.rs  config.rs  decisions.rs  doctor.rs  edge_scanner.rs  leaderboard.rs  login.rs  markets.rs  mod.rs  orders.rs  positions.rs  profile.rs  session.rs  setup.rs  shell.rs  wallet.rs  workflow.rs
cli/src/output/: mod.rs
cli/tests/: cli.rs
config/: OPEN_CORE_CLOSED_EDGE.md
docker/: Dockerfile  docker-compose.yml
edge/: LICENSE  README.md
evm/: README.md
infra/: DEPLOYMENT_SETUP.md
marketing/: protocol-release-v0.1.0-x.md
migrations/: 001_initial.sql  004_security_fixes.sql  008_external_integrations.sql  009_paper_trading.sql  010_decision_cells.sql  011_base_market_bootstrap.sql  012_base_bootstrap_runtime_state.sql  013_public_paper_cohort.sql  014_base_bootstrap_health.sql  015_hackathons.sql  016_hackathon_hardening.sql  017_agent_failure_tracking.sql  018_aerodrome_integration.sql  (+41 more)
(+686 files in other folders)
