[package]
name = "r44"
version = "0.2.0"
edition = "2021"
description = "relay44 CLI — prediction markets and agent execution"
license = "Apache-2.0"
repository = "https://github.com/relay44/relay44"
keywords = ["prediction-markets", "trading", "cli", "polymarket", "solana"]
categories = ["command-line-utilities", "finance"]
readme = "README.md"

[[bin]]
name = "r44"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"
percent-encoding = "2"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
bs58 = "0.5"
colored = "2"
indicatif = "0.17"
rand = "0.8"
chrono = "0.4"
base64 = "0.22"
terminal_size = "0.4"
ctrlc = "3"
tabled = "0.20"
rust_decimal = "1"
rustyline = "15"
async-recursion = "1"
shlex = "1"
strsim = "0.11"

[dev-dependencies]
tempfile = "3"
